fix: remove lazy loading

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <meta name="description" content="lorem">
 
+    <link rel="preload" href="/svg/notebook.svg" as="image">
+
     <title>Vite + React + TS</title>
   </head>
   <body>
